// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Month renders correctly when with props 1`] = `
.emotion-3 {
  padding-top: 2px;
  text-align: center;
  background: #fafafa;
  pointer-events: auto;
}

.emotion-3:last-child {
  padding-bottom: 40px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.375rem;
  height: 58px;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    height: 78px;
  }
}

.emotion-0 {
  font-weight: 700;
  margin-right: 5px;
}

.emotion-2 {
  top: 0;
}

<div
  className="emotion-3"
  role="rowgroup"
  style={
    Object {
      "bottom": 0,
    }
  }
>
  <div
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      Apr
    </span>
    <span>
      2019
    </span>
  </div>
  <div
    className="emotion-2"
  >
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-19T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555682400000"
      month="Apr"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      priceInPoints={false}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555682400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-20T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555768800000"
      month="Apr"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      priceInPoints={false}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555768800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-21T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555855200000"
      month="Apr"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      priceInPoints={false}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555855200000}
      year={2019}
    />
  </div>
</div>
`;

exports[`Month renders correctly with defaults 1`] = `
.emotion-3 {
  padding-top: 2px;
  text-align: center;
  background: #fafafa;
  pointer-events: auto;
}

.emotion-3:last-child {
  padding-bottom: 40px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.375rem;
  height: 58px;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    height: 78px;
  }
}

.emotion-0 {
  font-weight: 700;
  margin-right: 5px;
}

<div
  className="emotion-3"
  role="rowgroup"
  style={Object {}}
>
  <div
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      Apr
    </span>
    <span>
      2019
    </span>
  </div>
  <div
    className="emotion-2"
  >
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-19T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555682400000"
      month="Apr"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      priceInPoints={false}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555682400000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-20T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555768800000"
      month="Apr"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      priceInPoints={false}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555768800000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-21T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555855200000"
      month="Apr"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      priceInPoints={false}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555855200000}
      year={2019}
    />
  </div>
</div>
`;
